# RASTER-SoCC24

./: .gitignore  CMakeLists.txt  ChunkDataReader.cpp  ChunkDataReader.h  ChunkDataWriter.cpp  ChunkDataWriter.h  Dockerfile  IndexManager.cpp  IndexManager.h  MeshBuilder.cpp  MeshBuilder.h  MetaCache.cpp  MetaCache.h  MetadataHandler.cpp  MetadataHandler.h  README.md  RegionalRead.cpp  RegionalRead.h  VarCompress.h  adios2_config.xml  benchmark.py  config.h  raster.c  raster.h
conf/: cesm.json  wrfp.json
modules/: FindNetCDF.cmake
script/: benchmark.py  regionread.py
test/: benchmark.cpp  benchmark_adios.cpp  convert.cpp  convert_adios.cpp  masked_multi_read.cpp  masked_multi_read_adios2.cpp  test.cpp
